--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,4 @@ project(LexicalParser)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(LexicalParser main.cpp RegexScanner.cpp)
+add_executable(LexicalParser main.cpp RegexScanner.cpp CombinedNFAGenerator.cpp NFAGenerator.cpp)
