--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(
         src/main.cpp
         src/RegexScanner.cpp
         src/DFAGenerator.cpp
+        src/TransitionTableContainer.cpp
 )
 
 # Related to GoogleTest
@@ -27,6 +28,8 @@ add_executable(
         lexical-parser-builder-testing
         testing/DFAGeneratorTests.cpp
         src/DFAGenerator.cpp
+        src/TransitionTableContainer.cpp
+        testing/TransitionTableContainerTests.cpp
 )
 target_link_libraries(
         lexical-parser-builder-testing
