--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ add_executable(
         src/lexical-analyzer/utilities/types.h
         src/lexical-analyzer/utilities/LexicalUtility.cpp
         testing/LexicalAnalyzerTests.cpp
+        src/parser/utilities/ParsingToken.cpp
+        testing/ParsingTokenTests.cpp
 )
 target_link_libraries(
         lexical-parser-builder-testing
