Parsing table preparation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ add_executable(
         testing/ParsingTokenTests.cpp
         src/parser/utilities/ParserUtility.cpp
         testing/ParsingFirstFollowSetTests.cpp
+        src/parser/parsing-table/ParsingTable.cpp
 )
 target_link_libraries(
         lexical-parser-builder-testing
