--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,19 +13,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
         build_type: [Release]
-        c_compiler: [gcc, cl]
-        include:
-          - os: windows-latest
-            c_compiler: cl
-            cpp_compiler: cl
-          - os: ubuntu-latest
-            c_compiler: gcc
-            cpp_compiler: g++
-          - os: macos-latest
-            c_compiler: clang
-            cpp_compiler: clang++
+        c_compiler: [gcc]
+        cpp_compiler: [g++]
 
     steps:
       - uses: actions/checkout@v4
@@ -45,18 +36,8 @@ jobs:
           -S ${{ github.workspace }}
 
       - name: Build
-        run: |
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
-            cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
-          else
-            cmake --build ${{ steps.strings.outputs.build-output-dir }}
-          fi
+        run: cmake --build ${{ steps.strings.outputs.build-output-dir }}
 
       - name: Test
         working-directory: ${{ steps.strings.outputs.build-output-dir }}
-        run: |
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
-            ctest --build-config ${{ matrix.build_type }}
-          else
-            ctest
-          fi
+        run: ctest --build-config ${{ matrix.build_type }}
